# comp-hist

./: .gitignore  COPYING  Makefile  Makefile.in  README  README.TOO  TODO  c  configure  configure.in  corps  fairchildsemi  ias  ibmpc  linc  lisp  ord-corps  output  parc  pdp  sinclair  test  transistor  waits
algol/: algol
apple/: Makefile  ans  applex  aux  corp  lisa  mac68k  macos  macppc  newton  osx  servers
bcpl/: bcpl  c++  cpl  obj-c
be/: bebox  beos
cpm/: Makefile  cpm  ibmos2  msdos  msos2  wince  windows  winnt
cray/: corp  cray  servers
ctss/: ctss  its  multics
datagen/: corp  nova
dec/: corp  pdp  pdp11  rsts  rsx  tops  vms
doc/: demo  goals  mlist.ccc  other-dat  parsech  syntax
doc/sh/: sh
fortran/: fortran
ibm/: 602  corp
ibm/power/: power
ibm/sys-360/: 360
intel/: 4004  Makefile  amd  corps  pentium
intel/pc/: Makefile  (+1 more)
motorola/: 68xxx  Makefile  ppc
next/: corp  hw
palm/: palm  palmos  pcpdev
rfc/: assign-nums  host-req-comm  off-stds
scripts/: ParseCH.pm  biblio  biblio.pl  info  parse.h  parsech  parser  todot  togp  tovcg  tovcg.exp  toxml
scripts/browser/src/: Makefile  Makefile.am  Makefile.in  html.c  interface.c  main.c  node.h  parser.c  syntax3
sgi/: corp
sh/: awk  perl  sh
sun/: corp
unix/: 2bsd  386bsd  4bsd  Makefile  aix  aos  bsdi  chorus  consensys  corps  darwin  digital  freebsd  hpux  hurd  interactive  irix  linux  linux0  linux1  linux2  mach  minix  mklinux  netbsd  nextstep  openbsd  osf  plan9  research  sco  solaris  sunos  sysV  tandem  ultrix  unixware  usdl  usg  xenix  (+1 more)
(+135 files in other folders)
